--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node .",
+    "prestart": "npm install && node_modules/.bin/pm2 install pm2-slack && node_modules/.bin/pm2 set pm2-slack:slack_url https://hooks.slack.com/services/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 && node_modules/.bin/pm2 set pm2-slack:log true && node_modules/.bin/pm2 set pm2-slack:error true",
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
@@ -16,7 +17,9 @@
     "loopback-component-explorer": "^4.0.0",
     "serve-favicon": "^2.0.1",
     "shelljs": "^0.7.6",
-    "strong-error-handler": "^1.0.1"
+    "strong-error-handler": "^1.0.1",
+    "pm2": "^2.1.5",
+    "pm2-slack": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
